--- a/mysql.yaml
+++ b/mysql.yaml
@@ -2,6 +2,14 @@
   hosts: mysql
   become: yes
   tasks:
+  - name: ansible to install boto3 & botocore
+    ansible.builtin.pip:
+      name: 
+      - boto3
+      - botocore
+      executable: pip3.9
+
+#Inatalling mysql server      
   - name: install mysql server
     ansible.builtin.package:
       name: mysql-server
