--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,6 +1,9 @@
 - name: mysql configuration
   hosts: mysql
   become: yes
+  vars:
+    mysql_root_password: ExpenseApp@1
+    login_host: mysql.awspractice.shop
   tasks:
   - name: ansible to install boto3 & botocore
     ansible.builtin.pip:
@@ -21,4 +24,17 @@
       name: mysqld
       state: started
       enabled: yes
+
+#Connect to mysqlserver
+  - name: connect mysql server
+    community.mysql.mysql_info:
+      login_user: root
+      login_password: "{{ mysql_root_password }}"
+      login_host: "{{ login_host }}"
+    register: mysql_info
+  
+  - name: print mysql mysql_info
+    ansible.builtin.debug:
+      msg: "{{ mysql_info }}"
+
  
