--- a/mysql.yaml
+++ b/mysql.yaml
@@ -8,8 +8,7 @@
   - name: ansible to install boto3 & botocore
     ansible.builtin.pip:
       name: 
-      - boto3
-      - botocore
+      - PyMySQL
       executable: pip3.9
 
 #Inatalling mysql server      
