--- a/mysql.yaml
+++ b/mysql.yaml
@@ -36,4 +36,8 @@
     ansible.builtin.debug:
       msg: "{{ mysql_info }}"
 
+  - name: setup MySql root login_password
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+    when: mysql_info.failed is true
+
  
