--- a/mysql.yaml
+++ b/mysql.yaml
@@ -5,39 +5,34 @@
     mysql_root_password: ExpenseApp@1
     login_host: mysql.awspractice.shop
   tasks:
-  - name: ansible to install PyMySQL
+  - name: ansible to install pymysql
     ansible.builtin.pip:
-      name: 
+      name:
       - PyMySQL
       executable: pip3.9
-
-#Inatalling mysql server      
-  - name: install mysql server
+  - name: install MySQL Server
     ansible.builtin.package:
       name: mysql-server
       state: present
 
-#start the mysql-server 
   - name: start mysql server
     ansible.builtin.service:
       name: mysqld
       state: started
       enabled: yes
 
-#Connect to mysqlserver
   - name: connect mysql server
     community.mysql.mysql_info:
       login_user: root
       login_password: "{{ mysql_root_password }}"
       login_host: "{{ login_host }}"
+    ignore_errors: true
     register: mysql_info
-  
-  - name: print mysql mysql_info
+
+  - name: print mysql info
     ansible.builtin.debug:
       msg: "{{ mysql_info }}"
 
-  - name: setup MySql root login_password
+  - name: setup MySQL root password
     ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
     when: mysql_info.failed is true
-
- 
