--- a/backend.yaml
+++ b/backend.yaml
@@ -1,17 +1,23 @@
 - name: configure backend server
   hosts: backend
   become: yes
+  vars:
+    mysql_root_password: ExpenseApp@1
+    login_host: mysql.awspractice.shop
   tasks:
   - name: disable default nodejs
     ansible.builtin.command: dnf module disable nodejs -y
-  
+
   - name: enable nodejs 20
     ansible.builtin.command: dnf module enable nodejs:20 -y
 
   - name: install nodejs
     ansible.builtin.package:
-      name: nodejs
+      name: "{{ item }}"
       state: present
+    loop:
+    - nodejs
+    - mysql
 
   - name: create expense user
     ansible.builtin.user:
@@ -29,23 +35,23 @@
 
   - name: extract the code
     ansible.builtin.unarchive:
-      src: /tmp/backend.zip
+      src: /tmp/backend.zip #by default ansible thinks this is in ansible server
       dest: /app
       remote_src: yes
 
   - name: install dependencies
     ansible.builtin.command: npm install
     args:
-       chdir: /app
+      chdir: /app
 
   - name: copy backend service
     ansible.builtin.copy:
       src: backend.service
       dest: /etc/systemd/system/backend.service
 
-  - name: ansible to install PyMySQL
+  - name: ansible to install pymysql
     ansible.builtin.pip:
-      name: 
+      name:
       - PyMySQL
       - cryptography
       executable: pip3.9
@@ -55,6 +61,6 @@
       login_user: root
       login_password: "{{ mysql_root_password }}"
       login_host: "{{ login_host }}"
-      target: /app/schema/backend.sql 
+      target: /app/schema/backend.sql
       name: all
       state: import
