--- a/backend.yaml
+++ b/backend.yaml
@@ -31,6 +31,14 @@
       path: /app
       state: directory
 
+      - name: install boto3 and botocore for aws_s3 module
+      ansible.builtin.pip:
+        name:
+          - boto3
+          - botocore
+        executable: pip3
+
+
   - name: download the backend code
     amazon.aws.aws_s3:
         bucket: "{{ s3_bucket }}"
