--- a/frontend.yaml
+++ b/frontend.yaml
@@ -8,7 +8,7 @@
       state: present
       
   - name: start nginx server
-    ansible.bultin.service:
+    ansible.builtin.service:
       name: nginx
       state: started
       enabled: yes
