--- a/frontend.yaml
+++ b/frontend.yaml
@@ -6,17 +6,19 @@
     ansible.builtin.package:
       name: nginx
       state: present
-      
   - name: start nginx server
     ansible.builtin.service:
       name: nginx
       state: started
       enabled: yes
-
-  - name: remove the html directory
+  - name: remove html directory
     ansible.builtin.file:
       path: /usr/share/nginx/html
       state: absent
+  - name: create html directory
+    ansible.builtin.file:
+      path: /usr/share/nginx/html
+      state: directory
 
   - name: download the frontend code
     ansible.builtin.get_url:
@@ -25,16 +27,17 @@
 
   - name: extract the code
     ansible.builtin.unarchive:
-      src: /tmp/frontend.zip
+      src: /tmp/frontend.zip #by default ansible thinks this is in ansible server
       dest: /usr/share/nginx/html
       remote_src: yes
 
-  - name: copy expense config 
+  - name: copy expense conf
     ansible.builtin.copy:
-      src: expense.config
+      src: expense.conf
       dest: /etc/nginx/default.d/expense.conf
 
   - name: restart nginx
     ansible.builtin.service:
       name: nginx
       state: restarted
+  
